[HOTFIX] Fixes after DAS api change in atom-db/#216